Fix \whitespace\] and re-enable code copy button

--- a/src/app.css
+++ b/src/app.css
@@ -57,7 +57,9 @@
 }
 
 .prose pre {
-	border-radius: 0.2rem;
+	background-color: inherit;
+	color: inherit;
+	/* border-radius: 0.2rem; */
 	margin: 0 0 0.5rem 0;
 	padding: 0;
 	width: 100%;
